setup res send file to serve front html file

--- a/warehouse.html
+++ b/warehouse.html
@@ -1,28 +1,21 @@
 <!DOCTYPE html>
-<html lang= "en">
-    <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Warehouse</title>
-    <link rel="stylesheet" type="text/css" href="Warestyle.css">
+<html>
+<head>
+    <!-- HTML Codes by Quackit.com -->
+    <title>
+        Warehpise329 - Under Construction</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Warehouse329 WIP">
+    <style>
+        body {background-color:#ffffff;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
+        h1{text-align:center;font-family:Impact, sans-serif;color:#ff0000;background-color:#ffffff;}
+        p {text-align:center;font-family:Cursive;font-size:16px;font-style:italic;font-weight:normal;color:#000000;background-color:#ffffff;}
+    </style>
 </head>
 <body>
-      <main>
-    <h1>ware house data </h1>
-  <input type="button" value="SQL statement" onclick="" style="float: center;">
-  </main>
-
-<table id= "table">
-  <thead>
-    <th>Name</th>
-    <th>Item</th>
-    <th>route</th>
-    <th></th>
-    <th></th>
-    </thead>
-    <tbody></<tbody>
-
-    <script src="dbservice.js"></script>
-
+<h1>Warehouse 329 - WIP</h1>
+<p>Wahouse329 A Student Warehouse DBMS Project is currently under construction.  Check back later. </p>
 </body>
+<script src="ware.js"></script>
 </html>
+
