made slight tweaks to how queriesi are passed

--- a/warehouse.html
+++ b/warehouse.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <!-- HTML Codes by Quackit.com -->
-    <title>
-        Warehpise329 - Under Construction</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Warehouse329 WIP">
-    <style>
-        body {background-color:#ffffff;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
-        h1{text-align:center;font-family:Impact, sans-serif;color:#ff0000;background-color:#ffffff;}
-        p {text-align:center;font-family:Cursive;font-size:16px;font-style:italic;font-weight:normal;color:#000000;background-color:#ffffff;}
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>JSON Test</title>
 </head>
 <body>
-<h1>Warehouse 329 - WIP</h1>
-<p>Wahouse329 A Student Warehouse DBMS Project is currently under construction.  Check back later. </p>
+<div id="myData"></div>
+<script>
+    fetch('/getQuery')
+        .then(function (response) {
+            return response.json();
+        })
+        .then(function (data) {
+            appendData(data);
+        })
+        .catch(function (err) {
+            console.log('error: ' + err);
+        });
+    function appendData(data) {
+        var mainContainer = document.getElementById("myData");
+        for (var i = 0; i < data.length; i++) {
+            var div = document.createElement("div");
+            div.innerHTML = 'Name: ' + data[i].firstName + ' ' + data[i].lastName;
+            mainContainer.appendChild(div);
+        }
+    }
+</script>
 </body>
-<script src="ware.js"></script>
 </html>
-
