--- a/warehouse.html
+++ b/warehouse.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <html lang= "en">
     <head>
     <meta charset="UTF-8">
@@ -15,8 +16,6 @@
 <table id= "table">
   <thead>
     <th>Name</th>
-    <th>Item</th>
-    <th>route</th>
     <th></th>
     <th></th>
     </thead>
