--- a/warehouse.html
+++ b/warehouse.html
@@ -8,20 +8,59 @@
     <link rel="stylesheet" type="text/css" href="Warestyle.css">
 </head>
 <body>
-      <main>
-    <h1>ware house data </h1>
-  <input type="button" value="SQL statement" onclick="" style="float: center;">
-  </main>
+  <center>  <h1>WareHouse 329 inc.</h1> </center>
+      <header>
+  <center>  <h2>Quick Tabs</h2> </center>
+  <button id="fetchOrders">Show Orders</button>
+  <button id="fetchEmployees">Show Employees</button>
+  <button id="fetchAssigned">Assigned Employee Count</button>
+  <button id="fetchInventory">Distinct Inventory</button>
+  
+  <!-- changed buttons to work with fetching and listeners
+  <input type="button" value="Show Orders" onclick="" style="float: center;">
+  <input type="button" value="Show Employees" onclick="" style="float: center;">
+  <input type="button" value="Assigned Employee Count" onclick="" style="float: center;">
+  <input type="button" value="Distinct Inventory" onclick="" style="float: center;">\
+-->
+</header>
 
-<table id= "table">
+<table id= "table a">
   <thead>
-    <th>Name</th>
-    <th></th>
-    <th></th>
+    <th>Order ID</th>
+    <th>Customer ID</th>
+    <th>Route Name</th>
+    <th>Region</th>
     </thead>
-    <tbody></<tbody>
+    <tbody id = "table-bodya">
 
-    <script src="dbservice.js"></script>
+<table id= "table b ">
+      <thead>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Position</th>
+        <th>Salary</th>
+        <th>Assigned Zone</th>
+        </thead>
+<tbody id = "table-bodyb">
 
+  <table id= "table c">
+          <thead>
+            <th>Zone</th>
+            <th>Assigned Employee</th>
+            <th>Route Name</th>
+            </thead>
+<tbody id = "table-bodyc">
+
+  <table id= "table d">
+              <thead>
+                <th>Item</th>
+                <th>Type</th>
+                <th>Unique Count</th>
+                </thead>
+<tbody id = "table-bodyd">
+
+  <!-- used to connect db to webpage
+   <script src="filename"></script>
+-->
 </body>
 </html>
