--- a/warehouse.html
+++ b/warehouse.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Warehouse</title>
-    <link rel="stylesheet" type="text/css" href="Warestyle.css">
+    <link rel="stylesheet" type="text/css" href="/Warestyle.css">
 </head>
 <body>
   <center>  <h1>WareHouse 329 inc.</h1> </center>
