added placeholder query functions for 5th query

--- a/warehouse.html
+++ b/warehouse.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Warehouse</title>
     <link rel="stylesheet" type="text/css" href="/Warestyle.css">
-</head>
+
+    </head>
 <body>
   <center>  <h1>WareHouse 329 inc.</h1> </center>
       <header>
@@ -15,13 +16,14 @@
   <button id="fetchEmployees">Show Employees</button>
   <button id="fetchAssigned">Assigned Employee Count</button>
   <button id="fetchInventory">Distinct Inventory</button>
-  
-  <!-- changed buttons to work with fetching and listeners
-  <input type="button" value="Show Orders" onclick="" style="float: center;">
-  <input type="button" value="Show Employees" onclick="" style="float: center;">
-  <input type="button" value="Assigned Employee Count" onclick="" style="float: center;">
-  <input type="button" value="Distinct Inventory" onclick="" style="float: center;">\
--->
+
+<!--          <input type="button" value="Show Orders" onclick="" style="float: center;">-->
+
+          <!-- changed buttons to work with fetching and listeners
+          <input type="button" value="Show Employees" onclick="" style="float: center;">
+          <input type="button" value="Assigned Employee Count" onclick="" style="float: center;">
+          <input type="button" value="Distinct Inventory" onclick="" style="float: center;">\
+        -->
 </header>
 
 <table id= "table a">
@@ -59,8 +61,7 @@
                 </thead>
 <tbody id = "table-bodyd">
 
-  <!-- used to connect db to webpage
-   <script src="filename"></script>
--->
+<script src="ware.js"></script>
+
 </body>
 </html>
