renamed duplicate buttom id to fetchcustomer orders and its respective fetch function

--- a/warehouse.html
+++ b/warehouse.html
@@ -16,7 +16,7 @@
   <button id="fetchEmployees">Show Employees</button>
   <button id="fetchAssigned">Assigned Employee Count</button>
   <button id="fetchInventory">Distinct Inventory</button>
-  <button id="fetchInventory">Customer Orders</button>
+  <button id="fetchCustomerOrders">Customer Orders</button>
 
 </header>
 <center> <h2> All Curent Orders</h1> </center>
