centered buttons on main screen

--- a/warehouse.html
+++ b/warehouse.html
@@ -12,14 +12,16 @@
   <center>  <h1>WareHouse 329 inc.</h1> </center>
       <header>
   <center>  <h2>Quick Tabs</h2> </center>
+  <center>
   <button id="fetchOrders">Show Orders</button>
   <button id="fetchEmployees">Show Employees</button>
   <button id="fetchAssigned">Assigned Employee Count</button>
   <button id="fetchInventory">Distinct Inventory</button>
   <button id="fetchCustomerOrders">Customer Orders</button>
+  </center>
 
 </header>
-<center> <h2> All Curent Orders</h1> </center>
+<div style="text-align: center;"> <h2> All Curent Orders</h2> </div>
 <table class="table table-striped">
   <tr class="bg-info">
     <th> OrderID </th>
